//
// Copyright 2014 Midokura SARL
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

import "commons.proto";

package org.midonet.cluster.models;
option java_package = "org.midonet.cluster.models";
option java_outer_classname = "Devices";

message Network {
    // Neutron / MidoNet common attributes
    optional UUID id = 1;
    optional string tenant_id = 2;
    optional string name = 3;
    optional bool admin_state_up = 4;

    // MidoNet-specific fields
    optional uint32 tunnel_key = 5;
    optional UUID inbound_filter_id = 6;
    optional UUID outbound_filter_id = 7;
    optional UUID vxlan_port_id = 8;

    message Dhcp {
        optional IPSubnet subnet_address = 1;
        optional IPAddress server_address = 2;
        repeated IPAddress dns_server_address = 3;
        optional IPAddress default_gateway = 4;
        optional int32 interface_mtu = 5;

        message Opt121Route {
            optional IPSubnet dst_subnet = 1;
            optional IPAddress gateway = 2;
        }
        repeated Opt121Route opt121_routes = 6;

        message Host {
            optional string mac = 1;
            optional IPAddress ip_address = 2;
            optional string name = 3;
        }
        repeated Host hosts = 7;

        optional bool enabled = 8;
    }
    repeated Dhcp dhcp_subnets = 9;

    message DhcpV6 {
        optional IPSubnet subnet_address = 1;
        message Host {
            optional string client_id = 1;
            optional IPAddress fixed_address = 2;
            optional string name = 3;
        }
        repeated Host hosts = 2;
    }
    repeated DhcpV6 dhcp_v6_subnets = 10;

    // Back references
    repeated UUID port_ids = 101;
}

message Router {
    optional UUID id = 1;
    optional string tenant_id = 2;
    optional string name = 3;
    optional bool admin_state_up = 4;
    optional UUID inbound_filter_id = 5;
    optional UUID outbound_filter_id = 6;
    optional UUID load_balancer_id = 7;

    // Back references
    repeated UUID port_ids = 101;
}

message Port {
    optional UUID id = 1;
    optional UUID network_id = 2;  // Separate device id fields for ORM.
    optional UUID router_id = 3;
    optional UUID inbound_filter_id = 4;
    optional UUID outbound_filter_id = 5;
    optional int64 tunnel_key = 6;
    optional UUID peer_id = 7;
    optional UUID vif_id = 8;
    optional UUID host_id = 9;
    optional string interface_name = 10;
    optional bool admin_state_up = 11 [default = true];

    repeated UUID port_group_ids = 12;

    // interior bridge port specific
    optional uint32 vlan_id = 13;

    // Router port specific
    optional IPSubnet port_subnet = 14;
    optional IPAddress port_address = 15;
    optional string port_mac = 16;

    // VXLAN port specific
    optional IPAddress vxlan_mgmt_ip = 17;
    optional uint32 vxlan_mgmt_port = 18;
    optional uint32 vxlan_vni = 19;
    optional IPAddress vxlan_tunnel_ip = 20;
    optional UUID vxlan_tunnel_zone_id = 21;

    // Back references
    repeated UUID rule_ids = 101;
    repeated UUID port_ids = 102;
}

message PortGroup {
    optional UUID id = 1;
    optional string name = 2;
    optional string tenant_id = 3;

    // Back references
    repeated UUID port_ids = 101;
}

message PortSet {
    optional UUID id = 1;
}

message IpAddrGroup {
    optional UUID id = 1;
    optional string name = 2;
}

message Chain {
    optional UUID id = 1;
    optional string name = 2;

    // Back references
    repeated UUID rule_ids = 101;
    repeated UUID network_ids = 102;
    repeated UUID router_ids = 103;
    repeated UUID port_ids = 104;
}

message Route {
    optional UUID id = 1;
    optional string src_network_addr = 2;
    optional int32 src_network_length = 3;
    optional string dst_network_addr = 4;
    optional int32 dst_network_length = 5;
    enum NextHop {
        BLACKHOLE = 0;
        REJECT = 1;
        PORT = 2;
        LOCAL = 3;
    }
    optional NextHop next_hop = 6;
    optional UUID next_hop_port_id = 7;
    optional string next_hop_gateway = 8;
    optional int32 weight = 9;
    optional string attributes = 10;
    optional UUID router_id = 11;
}

message Rule {
    optional UUID id = 1;
    enum Action {
        ACCEPT = 1;
        CONTINUE = 2;
        DROP = 3;
        JUMP = 4;
        REJECT = 5;
        RETURN = 6;
    }
    optional Action action = 2;
    optional UUID chain_id = 3;

    // Rule conditions.
    optional bool conjunction_inv = 4;
    optional bool match_forward_flow = 5;
    optional bool match_return_flow = 6;
    repeated UUID in_port_ids = 7;
    optional bool in_port_inv = 8;
    repeated UUID out_port_ids = 9;
    optional bool out_port_inv = 10;
    optional UUID port_group_id = 11;
    optional bool inv_port_group = 12;
    optional UUID ip_addr_group_id_src = 13;
    optional bool inv_ip_addr_group_id_src = 14;
    optional UUID ip_addr_group_id_dst = 15;
    optional bool inv_ip_addr_group_id_dst = 16;
    optional int32 dl_type = 17;
    optional bool inv_dl_type = 18;
    optional string dl_src = 19;
    optional int64 dl_src_mask = 20 [default = -1];  // Top 16 bits ignored.
    optional bool inv_dl_src = 21;
    optional string dl_dst = 22;
    optional int64 dl_dst_mask =  23 [default = -1];  // Top 16 bits ignored.
    optional bool inv_dl_dst = 24;
    optional int32 nw_tos = 25;
    optional bool nw_tos_inv = 26;
    optional int32 nw_proto = 27;
    optional bool nw_proto_inv = 28;
    optional IPSubnet nw_src_ip = 29;
    optional IPSubnet nw_dst_ip = 30;
    optional Int32Range tp_src = 31;
    optional Int32Range tp_dst = 32;
    optional bool nw_src_inv = 33;
    optional bool nw_dst_inv = 34;
    optional bool tp_src_inv = 35;
    optional bool tp_dst_inv = 36;
}

message TunnelZone {
    optional UUID id = 1;
    optional string name = 2;
    enum Type {
        GRE = 1;
        VXLAN = 2;
    }
    optional Type type = 3;
}

message Vtep {
    optional string id = 1;  // This is actually an IP address.
    optional uint32 management_port = 2;
    optional UUID tunnel_zone_id = 3;
    repeated string tunnel_ips = 4;
    repeated UUID bindings = 5;
}

message VtepBinding {
    optional UUID id = 1;
    optional string port_name = 2;
    optional uint32 vlan_id = 3;    // A VLAN ID is a short int.
    optional UUID network_id = 4;

    // Back references
    optional string vtep_id = 101;
}

message Host {
    optional UUID id = 1;
    optional string name = 2;
    optional bool alive = 3;
    repeated string addresses = 4; // IP addrs
    optional int32 flooding_proxy_weight = 5;
}

message HostInterfacePort {
    optional string id = 1;
    optional UUID host_id = 2;
    optional UUID port_id = 3;
    optional string interface_name = 4;
}
